--- a/interface/giao_dien_US4.html
+++ b/interface/giao_dien_US4.html
@@ -1,76 +1,228 @@
-<!--us4-->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>US4-Thanh toán & Trừ tồn kho</title>
-    <link rel="stylesheet" href="style.css">
+    <title>US4 - Thanh toán & Trừ tồn kho</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --primary: #4f46e5;
+            --primary-dark: #4338ca;
+            --bg: #f4f6fb;
+            --card: #ffffff;
+            --text: #1f2937;
+            --muted: #6b7280;
+            --border: #e5e7eb;
+            --success: #16a34a;
+        }
+
+        * {
+            box-sizing: border-box;
+            font-family: 'Inter', sans-serif;
+        }
+
+        body {
+            margin: 0;
+            background: linear-gradient(135deg, #eef2ff, #f8fafc);
+            color: var(--text);
+        }
+
+        .container {
+            max-width: 1100px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 30px;
+        }
+
+        .header h2 {
+            margin: 0;
+            font-size: 28px;
+            font-weight: 700;
+        }
+
+        .header span {
+            color: var(--muted);
+            font-size: 14px;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 24px;
+        }
+
+        .card {
+            background: var(--card);
+            border-radius: 16px;
+            padding: 24px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+        }
+
+        .card h3 {
+            margin-top: 0;
+            margin-bottom: 16px;
+            font-size: 18px;
+            font-weight: 600;
+            border-left: 4px solid var(--primary);
+            padding-left: 10px;
+        }
+
+        label {
+            display: block;
+            margin-top: 12px;
+            font-size: 14px;
+            font-weight: 500;
+        }
+
+        input, select {
+            width: 100%;
+            margin-top: 6px;
+            padding: 10px 12px;
+            border-radius: 10px;
+            border: 1px solid var(--border);
+            font-size: 14px;
+            transition: 0.2s ease;
+        }
+
+        input:focus, select:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(79,70,229,0.15);
+        }
+
+        input[disabled] {
+            background: #f3f4f6;
+            color: var(--muted);
+        }
+
+        .btn {
+            margin-top: 20px;
+            width: 100%;
+            padding: 12px;
+            border-radius: 12px;
+            border: none;
+            font-size: 15px;
+            font-weight: 600;
+            cursor: pointer;
+            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            color: #fff;
+            transition: transform 0.15s ease, box-shadow 0.15s ease;
+        }
+
+        .btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 8px 20px rgba(79,70,229,0.35);
+        }
+
+        .bill {
+            margin-top: 24px;
+            padding: 20px;
+            border-radius: 14px;
+            background: #f9fafb;
+            border: 1px dashed var(--border);
+        }
+
+        .bill h3 {
+            margin-top: 0;
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        .bill-content {
+            font-size: 14px;
+            line-height: 1.6;
+            color: var(--text);
+        }
+
+        .print-btn {
+            margin-top: 12px;
+            background: var(--success);
+        }
+
+        footer {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 13px;
+            color: var(--muted);
+        }
+    </style>
 </head>
 <body>
 
 <div class="container">
-    <h2>🧾 Thanh toán & Trừ tồn kho</h2>
 
-    <!-- ================== PHẦN 1: THANH TOÁN ĐƠN HÀNG ================== -->
-    <div class="section">
-        <h3>Thông tin sản phẩm</h3>
-
-        <label>Sản phẩm</label>
-        <input type="text" id="productName" value="Áo thun nam">
-
-        <label>Số lượng</label>
-        <input type="number" id="quantity" value="1" min="1">
-
-        <label>Tồn kho hiện tại</label>
-        <input type="number" id="stock" value="50" disabled>
+    <div class="header">
+        <div>
+            <h2>🧾 Thanh toán & Trừ tồn kho</h2>
+            <span>US4 · Sales & Inventory Module</span>
+        </div>
     </div>
 
-    <div class="section">
-        <h3>Hình thức thanh toán</h3>
-        <select id="paymentMethod">
-            <option value="Tiền mặt">Tiền mặt</option>
-            <option value="Chuyển khoản">Chuyển khoản</option>
-            <option value="Thẻ ATM">Thẻ ATM</option>
-            <option value="Thẻ thành viên">Thẻ thành viên</option>
-        </select>
+    <div class="grid">
+        <!-- Thanh toán đơn hàng -->
+        <div class="card">
+            <h3>Thông tin đơn hàng</h3>
+
+            <label>Sản phẩm</label>
+            <input type="text" id="productName" value="Áo thun nam">
+
+            <label>Số lượng</label>
+            <input type="number" id="quantity" value="1" min="1">
+
+            <label>Tồn kho hiện tại</label>
+            <input type="number" id="stock" value="50" disabled>
+
+            <label>Hình thức thanh toán</label>
+            <select id="paymentMethod">
+                <option>Tiền mặt</option>
+                <option>Chuyển khoản</option>
+                <option>Thẻ ATM</option>
+                <option>Thẻ thành viên</option>
+            </select>
+
+            <button class="btn" onclick="processPayment()">Thanh toán</button>
+        </div>
+
+        <!-- US04 Trừ tồn kho -->
+        <div class="card">
+            <h3>US04 · Trừ tồn kho</h3>
+
+            <label>Tên sản phẩm</label>
+            <input type="text" id="product" value="Áo thun nam">
+
+            <label>Số lượng bán</label>
+            <input type="number" id="sellQuantity" value="1" min="1">
+
+            <label>Tồn kho hiện tại</label>
+            <input type="number" id="currentStock" value="20" disabled>
+
+            <label>Phương thức thanh toán</label>
+            <select id="payment">
+                <option value="">-- Chọn --</option>
+                <option>Tiền mặt</option>
+                <option>Chuyển khoản</option>
+            </select>
+
+            <button class="btn" onclick="confirmPayment()">Xác nhận thanh toán</button>
+
+            <div class="bill">
+                <h3>HÓA ĐƠN BÁN HÀNG</h3>
+                <div id="billContentUS04" class="bill-content"></div>
+                <button class="btn print-btn" onclick="window.print()">In hóa đơn</button>
+            </div>
+        </div>
     </div>
 
-    <button onclick="processPayment()">Thanh toán</button>
-
-
-    <hr>
-
-    <!-- ================== PHẦN 2: US04 - TRỪ TỒN KHO ================== -->
-    <div class="section">
-        <h3>US04 - Trừ tồn kho</h3>
-
-        <label>Tên sản phẩm</label>
-        <input type="text" id="product" value="Áo thun nam">
-
-        <label>Số lượng bán</label>
-        <input type="number" id="sellQuantity" value="1" min="1">
-
-        <label>Tồn kho hiện tại</label>
-        <input type="number" id="currentStock" value="20" disabled>
-    </div>
-
-    <div class="section">
-        <label>Phương thức thanh toán</label>
-        <select id="payment">
-            <option value="">-- Chọn --</option>
-            <option value="Tiền mặt">Tiền mặt</option>
-            <option value="Chuyển khoản">Chuyển khoản</option>
-        </select>
-    </div>
-
-    <button onclick="confirmPayment()">Xác nhận thanh toán</button>
-
-    <!-- Hóa đơn US04 -->
-    <div class="bill">
-        <h3>HÓA ĐƠN BÁN HÀNG</h3>
-        <div id="billContentUS04"></div>
-        <button onclick="window.print()">In hóa đơn</button>
-    </div>
+    <footer>
+        © 2025 · Designed like a senior dev 😎 · Clean · Scalable · Maintainable
+    </footer>
 
 </div>
 
